# piflux

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python_package.yml  python_packages.yml
examples/: run_flux.py
src/piflux/: __init__.py  config.py  context.py  mode.py  patch.py
src/piflux/adapters/: __init__.py  diffusers.py
src/piflux/ops/: __init__.py  context_ops.py
tests/: test_subprocess.py
